// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return idcc results for boulangerie 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "8",
      "_index": "cdtn_document_test",
      "_score": 1.9203103,
      "_source": Object {
        "id": "KALICONT000005635886",
        "idcc": "843",
        "slug": "843-convention-collective-nationale-de-la-boulangerie-patisserie-du-19-mars-1976",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "9",
      "_index": "cdtn_document_test",
      "_score": 1.8348562,
      "_source": Object {
        "id": "KALICONT000005635691",
        "idcc": "1747",
        "slug": "1747-convention-collective-nationale-des-activites-industrielles-de-boulangerie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 1.9203103,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`return idcc results for pati 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "8",
      "_index": "cdtn_document_test",
      "_score": 0.6839632,
      "_source": Object {
        "id": "KALICONT000005635886",
        "idcc": "843",
        "slug": "843-convention-collective-nationale-de-la-boulangerie-patisserie-du-19-mars-1976",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "9",
      "_index": "cdtn_document_test",
      "_score": 0.6839632,
      "_source": Object {
        "id": "KALICONT000005635691",
        "idcc": "1747",
        "slug": "1747-convention-collective-nationale-des-activites-industrielles-de-boulangerie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 0.6839632,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;
